README aktuellem Stand angepasst

--- a/src/README
+++ b/src/README
@@ -3,7 +3,35 @@ Logic Funktion in gui implementiert. Funktioniert
 
 Probleme/Bugs/Fehler:
 
--Die Position der ausgangs Steine stimmt nicht.
--Bei  >2 Spielern (int spieler_number) kommt es zu Fehlen bei der Init Stein Positionierung
 
-Behebung dringend notwendig!
+main der Logik
+
+#include <iostream>
+#include "Logic.h"
+
+using namespace std;
+
+
+int main(){
+	int x, y;
+
+	Logic var = Logic(8, 8, 3);
+	var.setInitStones();
+	cout << "Stein laesst sich " << var.validation(3,3) << " setzten (0/nein 1/ja)";
+	while(true){
+
+		for(int i = 0; i < var.getFields().size();i++){
+			cout << endl;
+			for(int j = 0; j < var.getFields()[i].size();j++){
+				cout << var.getFields()[i][j] << " ";
+			}
+		}
+
+		cout << endl << "gib die x Koordinate fuer den neuen Stein ein" << endl;
+		cin >> x;
+		cout << "gib die y Koordinate fuer den neuen Stein ein" << endl;
+		cin >> y;
+		var.setField(x, y);
+	}
+	return 0;
+}
