--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 History:
+-14.12.12
+	Methode zum ermitteln der zu animierenden Steine geschrieben
+	 
 -01.12.12 
 	Erster Server- und Clientcode hochgeladen
 		-weder Client noch Server blockiert
